--- a/app/src/main/res/layout/item_friend.xml
+++ b/app/src/main/res/layout/item_friend.xml
@@ -84,8 +84,8 @@
         android:paddingLeft="3dp"
         android:paddingRight="3dp"
         android:textSize="12sp"
-        android:textStyle="bold"
-        android:visibilitySrc="(isNew)"/>
+        android:textStyle="bold"/>
+<!--        android:visibilitySrc="(isNew)"/>-->
 
 
 
