resolvendo problema com Adapter

--- a/app/src/main/res/layout/activity_listagem_prestador.xml
+++ b/app/src/main/res/layout/activity_listagem_prestador.xml
@@ -248,7 +248,8 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="520dp" />
+        android:layout_height="520dp"
+        tools:listitem="@layout/lista_prestador_layout"/>
 
 
 </LinearLayout>
