--- a/app/src/main/res/layout/activity_listagem_prestador.xml
+++ b/app/src/main/res/layout/activity_listagem_prestador.xml
@@ -247,7 +247,7 @@
     </HorizontalScrollView>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_Cards"
+        android:id="@+id/rv_cards"
         android:layout_width="match_parent"
         android:layout_height="520dp"
         tools:listitem="@layout/lista_prestador_layout" />
