--- a/app/src/main/res/layout/activity_cadastro_prestador_de_servico.xml
+++ b/app/src/main/res/layout/activity_cadastro_prestador_de_servico.xml
@@ -1,9 +1,246 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CadastroPrestadorDeServico">
+    android:orientation="vertical"
+    tools:context=".CadastroCliente">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/const_logo_cadastro2"
+        android:layout_width="match_parent"
+        android:layout_height="200dp">
+
+        <ImageView
+            android:id="@+id/iv_logo_cadastro"
+            android:layout_width="300dp"
+            android:layout_height="150dp"
+            android:scaleType="centerInside"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.495"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:srcCompat="@drawable/logotcc" />
+
+        <TextView
+            android:id="@+id/tv_vamoscomecar_cadastro"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Vamos começar!"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/iv_logo_cadastro"
+            android:textColor="@color/Primaria"/>
+
+        <TextView
+            android:id="@+id/tv_facalogin"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Crie sua nova conta"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_vamoscomecar_cadastro"
+            android:textColor="@color/Preto"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:id="@+id/ll_cadastro"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <EditText
+                android:id="@+id/et_nomePrestador"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginRight="20dp"
+                android:background="@drawable/edit_text_login_background"
+                android:hint="Nome Completo"
+                android:padding="15dp"
+                android:visibility="visible"/>
+
+            <EditText
+                android:id="@+id/et_emailPrestador"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginRight="20dp"
+                android:background="@drawable/edit_text_login_background"
+                android:hint="E-mail mais utilizado"
+                android:inputType="textEmailAddress"
+                android:padding="15dp"
+                android:visibility="visible"/>
+
+            <EditText
+                android:id="@+id/et_celularPrestador"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginRight="20dp"
+                android:background="@drawable/edit_text_login_background"
+                android:hint="Celular (com DDD)"
+                android:inputType="numberDecimal"
+                android:padding="15dp"
+                android:visibility="visible"/>
+
+            <EditText
+                android:id="@+id/et_cepPrestador"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginRight="20dp"
+                android:background="@drawable/edit_text_login_background"
+                android:hint="CEP"
+                android:inputType="numberDecimal"
+                android:padding="15dp"
+                android:visibility="visible"/>
+
+            <EditText
+                android:id="@+id/et_ruaPrestador"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginRight="20dp"
+                android:background="@drawable/edit_text_login_background"
+                android:hint="Rua"
+                android:padding="15dp"
+                android:visibility="visible"/>
+
+            <EditText
+                android:id="@+id/et_estadoPrestador"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginRight="20dp"
+                android:background="@drawable/edit_text_login_background"
+                android:hint="Estado"
+                android:padding="15dp"
+                android:visibility="visible"/>
+
+            <EditText
+                android:id="@+id/et_cidadePrestador"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginRight="20dp"
+                android:background="@drawable/edit_text_login_background"
+                android:hint="Cidade "
+                android:padding="15dp"
+                android:visibility="visible"/>
+
+            <EditText
+                android:id="@+id/et_bairroPrestador"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginRight="20dp"
+                android:background="@drawable/edit_text_login_background"
+                android:hint="Bairro"
+                android:padding="15dp"
+                android:visibility="visible"/>
+
+            <EditText
+                android:id="@+id/et_numeroPrestador"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginRight="20dp"
+                android:background="@drawable/edit_text_login_background"
+                android:hint="Número da residência"
+                android:inputType="numberDecimal"
+                android:padding="15dp"
+                android:visibility="visible"/>
+
+            <EditText
+                android:id="@+id/et_datadenascimentoPrestador"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginRight="20dp"
+                android:background="@drawable/edit_text_login_background"
+                android:hint="Data de nascimento"
+                android:inputType="datetime"
+                android:padding="15dp"
+                android:visibility="visible" />
+
+            <EditText
+                android:id="@+id/et_cpfPrestador"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginRight="20dp"
+                android:background="@drawable/edit_text_login_background"
+                android:hint="CPF"
+                android:inputType="numberDecimal"
+                android:padding="15dp"
+                android:visibility="gone" />
+
+            <EditText
+                android:id="@+id/et_rgPrestador"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginRight="20dp"
+                android:background="@drawable/edit_text_login_background"
+                android:hint="RG"
+                android:inputType="numberDecimal"
+                android:padding="15dp"
+                android:visibility="gone" />
+
+            <EditText
+                android:id="@+id/et_roomPrestador"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginRight="20dp"
+                android:background="@drawable/edit_text_login_background"
+                android:hint="Digite um número para entrar em contato com o prestador"
+                android:inputType="numberDecimal"
+                android:padding="15dp"
+                android:visibility="gone" />
+
+            <EditText
+                android:id="@+id/et_senhaPrestador"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginRight="20dp"
+                android:background="@drawable/edit_text_login_background"
+                android:hint="Senha"
+                android:padding="15dp"
+                android:visibility="gone" />
+
+            <Button
+                android:id="@+id/button_cadastrarPrestador"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="11dp"
+                android:layout_marginRight="20dp"
+                android:padding="15dp"
+                android:text="Cadastrar-me"
+                android:visibility="visible" />
+        </LinearLayout>
+    </ScrollView>
+</LinearLayout>
