--- a/app/src/main/res/layout/activity_cadastro_cliente.xml
+++ b/app/src/main/res/layout/activity_cadastro_cliente.xml
@@ -65,7 +65,7 @@
                 android:background="@drawable/edit_text_login_background"
                 android:hint="Nome Completo"
                 android:padding="15dp"
-                android:visibility="gone"/>
+                android:visibility="visible"/>
 
             <EditText
                 android:id="@+id/et_emailCliente"
@@ -78,7 +78,7 @@
                 android:hint="E-mail mais utilizado"
                 android:inputType="textEmailAddress"
                 android:padding="15dp"
-                android:visibility="gone"/>
+                android:visibility="visible"/>
 
             <EditText
                 android:id="@+id/et_celularCliente"
@@ -91,7 +91,7 @@
                 android:hint="Celular (com DDD)"
                 android:inputType="numberDecimal"
                 android:padding="15dp"
-                android:visibility="gone"/>
+                android:visibility="visible"/>
 
             <EditText
                 android:id="@+id/et_cepCliente"
@@ -104,7 +104,7 @@
                 android:hint="CEP"
                 android:inputType="numberDecimal"
                 android:padding="15dp"
-                android:visibility="gone"/>
+                android:visibility="visible"/>
 
             <EditText
                 android:id="@+id/et_ruaCliente"
@@ -116,7 +116,7 @@
                 android:background="@drawable/edit_text_login_background"
                 android:hint="Rua"
                 android:padding="15dp"
-                android:visibility="gone"/>
+                android:visibility="visible"/>
 
             <EditText
                 android:id="@+id/et_estadoCliente"
@@ -128,7 +128,7 @@
                 android:background="@drawable/edit_text_login_background"
                 android:hint="Estado"
                 android:padding="15dp"
-                android:visibility="gone"/>
+                android:visibility="visible"/>
 
             <EditText
                 android:id="@+id/et_cidadeCliente"
@@ -140,7 +140,7 @@
                 android:background="@drawable/edit_text_login_background"
                 android:hint="Cidade "
                 android:padding="15dp"
-                android:visibility="gone"/>
+                android:visibility="visible"/>
 
             <EditText
                 android:id="@+id/et_bairroCliente"
@@ -152,7 +152,7 @@
                 android:background="@drawable/edit_text_login_background"
                 android:hint="Bairro"
                 android:padding="15dp"
-                android:visibility="gone"/>
+                android:visibility="visible"/>
 
             <EditText
                 android:id="@+id/et_numeroCliente"
@@ -165,7 +165,7 @@
                 android:hint="Número da residência"
                 android:inputType="numberDecimal"
                 android:padding="15dp"
-                android:visibility="gone"/>
+                android:visibility="visible"/>
 
             <EditText
                 android:id="@+id/et_datadenascimentoCliente"
