--- a/app/src/main/res/layout/activity_cadastro_prestador_de_servico.xml
+++ b/app/src/main/res/layout/activity_cadastro_prestador_de_servico.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".CadastroCliente">
+    tools:context=".CadastroPrestadorDeServico">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/const_logo_cadastro2"
@@ -204,7 +204,7 @@
                 android:hint="RG"
                 android:inputType="numberDecimal"
                 android:padding="15dp"
-                android:visibility="gone" />
+                android:visibility="gone"/>
 
             <EditText
                 android:id="@+id/et_roomPrestador"
@@ -240,7 +240,7 @@
                 android:layout_marginRight="20dp"
                 android:padding="15dp"
                 android:text="Cadastrar-me"
-                android:visibility="visible" />
+                android:visibility="gone" />
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
