--- a/app/src/main/res/layout/activity_historico_chat.xml
+++ b/app/src/main/res/layout/activity_historico_chat.xml
@@ -29,6 +29,22 @@
 
     <include layout="@layout/item_friend"/>
 
+    <include layout="@layout/item_friend"/>
+
+    <include layout="@layout/item_friend"/>
+
+    <include layout="@layout/item_friend"/>
+
+    <include layout="@layout/item_friend"/>
+
+    <include layout="@layout/item_friend"/>
+
+    <include layout="@layout/item_friend"/>
+
+    <include layout="@layout/item_friend"/>
+
+    <include layout="@layout/item_friend"/>
+
 
 </LinearLayout>
 </layout>
