--- a/app/src/main/res/layout/activity_cadastro_cliente.xml
+++ b/app/src/main/res/layout/activity_cadastro_cliente.xml
@@ -33,16 +33,19 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Vamos começar!"
+            android:layout_marginTop="9dp"
             android:textColor="@color/Primaria"
             android:layout_gravity="center"/>
 
         <TextView
-            android:id="@+id/tv_facalogin"
-            android:layout_width="wrap_content"
+            android:id="@+id/tv_crie_seua_nova_conta_cadastro_cliente"
+            android:layout_width="330dp"
             android:layout_height="wrap_content"
-            android:text="Crie sua nova conta"
-            android:textColor="@color/Preto"
-            android:layout_gravity="center"/>
+            android:layout_gravity="center"
+            android:textAlignment="center"
+            android:layout_marginTop="10dp"
+            android:text="Crie sua nova conta e contrate clientes para sua reforma"
+            android:textColor="@color/Preto" />
 
     </LinearLayout>
 
@@ -61,7 +64,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="14dp"
                 android:layout_marginRight="20dp"
                 android:background="@drawable/edit_text_login_background"
                 android:hint="Nome Completo"
@@ -107,7 +110,7 @@
                 android:padding="15dp"
                 android:visibility="visible"/>
 
-            <EditText
+            <TextView
                 android:id="@+id/et_ruaCliente"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -119,7 +122,7 @@
                 android:padding="15dp"
                 android:visibility="visible"/>
 
-            <EditText
+            <TextView
                 android:id="@+id/et_estadoCliente"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -131,7 +134,7 @@
                 android:padding="15dp"
                 android:visibility="visible"/>
 
-            <EditText
+            <TextView
                 android:id="@+id/et_cidadeCliente"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -143,7 +146,7 @@
                 android:padding="15dp"
                 android:visibility="visible"/>
 
-            <EditText
+            <TextView
                 android:id="@+id/et_bairroCliente"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -168,7 +171,7 @@
                 android:padding="15dp"
                 android:visibility="visible"/>
 
-            <EditText
+            <TextView
                 android:id="@+id/et_datadenascimentoCliente"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -176,7 +179,7 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginRight="20dp"
                 android:background="@drawable/edit_text_login_background"
-                android:hint="Data de nascimento"
+                android:hint="Clique e insira sua data de nascimento"
                 android:inputType="datetime"
                 android:padding="15dp"
                 android:visibility="visible" />
