--- a/app/src/main/res/layout/activity_cadastro_prestador_de_servico.xml
+++ b/app/src/main/res/layout/activity_cadastro_prestador_de_servico.xml
@@ -7,43 +7,47 @@
     android:orientation="vertical"
     tools:context=".CadastroPrestadorDeServico">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/const_logo_cadastro2"
+    <LinearLayout
+        android:id="@+id/lv_topo_cadastro_prestador"
         android:layout_width="match_parent"
-        android:layout_height="200dp">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/iv_logo_cadastro"
-            android:layout_width="300dp"
-            android:layout_height="150dp"
-            android:scaleType="centerInside"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.495"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:srcCompat="@drawable/logotcc" />
+        <androidx.cardview.widget.CardView
+            android:layout_width="125dp"
+            android:layout_height="125dp"
+            android:layout_gravity="center"
+            app:cardCornerRadius="50dp">
+
+            <ImageView
+                android:id="@+id/iv_logo_cadastro_prestador"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="centerCrop"
+                android:src="@drawable/logotcc" />
+
+        </androidx.cardview.widget.CardView>
 
         <TextView
-            android:id="@+id/tv_vamoscomecar_cadastro"
+            android:id="@+id/tv_vamoscomecar_cadastro_prestador"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:text="Vamos começar!"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/iv_logo_cadastro"
-            android:textColor="@color/Primaria"/>
+            android:layout_marginTop="9dp"
+            android:textColor="@color/Primaria" />
 
         <TextView
-            android:id="@+id/tv_facalogin"
-            android:layout_width="wrap_content"
+            android:id="@+id/tv_crie_seua_nova_conta_cadastro_prestador"
+            android:layout_width="330dp"
             android:layout_height="wrap_content"
-            android:text="Crie sua nova conta"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_vamoscomecar_cadastro"
-            android:textColor="@color/Preto"/>
+            android:layout_gravity="center"
+            android:textAlignment="center"
+            android:layout_marginTop="10dp"
+            android:text="Crie sua nova conta e preste suas especialidades como serviço"
+            android:textColor="@color/Preto" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
 
     <ScrollView
         android:layout_width="match_parent"
@@ -60,7 +64,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="14dp"
                 android:layout_marginRight="20dp"
                 android:background="@drawable/edit_text_login_background"
                 android:hint="Nome Completo"
@@ -106,7 +110,7 @@
                 android:padding="15dp"
                 android:visibility="visible"/>
 
-            <EditText
+            <TextView
                 android:id="@+id/et_ruaPrestador"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -118,7 +122,7 @@
                 android:padding="15dp"
                 android:visibility="visible"/>
 
-            <EditText
+            <TextView
                 android:id="@+id/et_estadoPrestador"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -130,7 +134,7 @@
                 android:padding="15dp"
                 android:visibility="visible"/>
 
-            <EditText
+            <TextView
                 android:id="@+id/et_cidadePrestador"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -142,7 +146,7 @@
                 android:padding="15dp"
                 android:visibility="visible"/>
 
-            <EditText
+            <TextView
                 android:id="@+id/et_bairroPrestador"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -167,7 +171,7 @@
                 android:padding="15dp"
                 android:visibility="visible"/>
 
-            <EditText
+            <TextView
                 android:id="@+id/et_datadenascimentoPrestador"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -175,7 +179,7 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginRight="20dp"
                 android:background="@drawable/edit_text_login_background"
-                android:hint="Data de nascimento"
+                android:hint="Clique e insira sua data de nascimento"
                 android:inputType="datetime"
                 android:padding="15dp"
                 android:visibility="visible" />
