--- a/app/src/main/res/layout/lista_prestador_layout.xml
+++ b/app/src/main/res/layout/lista_prestador_layout.xml
@@ -19,6 +19,7 @@
 
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/card"
             android:layout_width="match_parent"
             android:layout_height="119dp"
             android:orientation="vertical"
