--- a/app/src/main/res/layout/activity_dialog_cadastro.xml
+++ b/app/src/main/res/layout/activity_dialog_cadastro.xml
@@ -20,22 +20,22 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/tv_titulo_dialog_cadastro"
         android:layout_marginTop="25dp"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
         <Button
             android:id="@+id/bnt_contratar_prestador_dialog_cadastro"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
-            android:layout_marginRight="70dp"
             android:text="Contratar um prestador de serviço"
-            android:layout_marginLeft="20dp"/>
+            android:layout_gravity="center"/>
 
         <Button
             android:id="@+id/bnt_ser_prestador_dialog_cadastro"
             android:layout_width="150dp"
             android:layout_height="76dp"
             android:layout_marginTop="10dp"
-            android:text="Prestar meu serviço" />
+            android:text="Prestar meu serviço"
+            android:layout_gravity="center"/>
 
 
     </LinearLayout>
